# noob-robot-mcp

./: .cursorules  .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  remove_unused_tools.sh  setup_browser_tools.sh  start.sh  test_robot.py
docs/: docs.md
output/: log_20250501_053625.html  log_20250501_054726.html  log_20250501_055142.html  log_20250501_060329.html  log_20250501_074839.html  log_20250501_075410.html  log_20250501_091708.html  log_20250501_091730.html  log_20250501_093643.html  log_20250501_093708.html  log_now.html  output_20250501_053625.xml  output_20250501_054726.xml  output_20250501_055142.xml  output_20250501_060329.xml  output_20250501_074839.xml  output_20250501_075410.xml  output_20250501_091708.xml  output_20250501_091730.xml  output_20250501_093643.xml  output_20250501_093708.xml  output_now.xml  report_20250501_053625.html  report_20250501_054726.html  report_20250501_055142.html  report_20250501_060329.html  report_20250501_074839.html  report_20250501_075410.html  report_20250501_091708.html  report_20250501_091730.html  report_20250501_093643.html  report_20250501_093708.html  report_now.html
src/config/: config.py
src/mcp_server_sse/: server.py
src/mcp_tools/: README.md  robot_browser_manager.py
src/mcp_tools/robot_agent_prompt/: tool.py
src/mcp_tools/robot_auth_handler/: __init__.py  tool.py
src/mcp_tools/robot_auto_locator/: __init__.py  tool.py
src/utils/: auth_manager.py  helpers.py  smart_browser.py  smart_locators.py
tests/: registration_test.robot
(+62 files in other folders)
